# ResidentReaper

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  build.rs
.github/workflows/: build.yml  release.yml
scripts/: lolbin_ingress.py  prefetch_activity.py  timeline.py  user_files.py  usn_activity.py
src/: main.rs
src/cli/: mft_cmd.rs  mod.rs  usn_cmd.rs
src/core/: attributes.rs  mft_csv.rs  mft_entry.rs  mft_parser.rs  mod.rs  ntfs.rs  resident.rs  types.rs  usn_csv.rs  usn_parser.rs
src/gui/: app.rs  export.rs  filters.rs  mod.rs  table_view.rs
