[package]
name = "resident-reaper"
version = "0.1.0"
edition = "2021"
description = "NTFS forensic tool - MFT/USN parser and resident data hunter"
license = "MIT"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:csv", "dep:indicatif"]
gui = ["dep:eframe", "dep:egui_extras", "dep:image", "dep:rfd"]

[dependencies]
# Core - always present
byteorder = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.11"
memmap2 = "0.9"

# CLI-only
clap = { version = "4", features = ["derive"], optional = true }
csv = { version = "1", optional = true }
indicatif = { version = "0.17", optional = true }

# GUI-only
eframe = { version = "0.31", optional = true }
egui_extras = { version = "0.31", features = ["datepicker"], optional = true }
image = { version = "0.25", default-features = false, features = ["png"], optional = true }
rfd = { version = "0.15", optional = true }

[build-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
